fixed setting grades bigger than 100

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -193,6 +193,7 @@ BODY {
                     padding: 0;
                     text-align: center;
                     color: black;
+                    box-shadow: none;
 
                     &.white-input{
                       color: white;
