--- a/Chalkable.Web/assets/jade/activities/announcement/AdminAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AdminAnnouncementForm.jade
@@ -2,5 +2,5 @@
     .loader
     +ActionForm('announcement', 'save')(onlySubmitValidate=true).announcement-form
         .ann-form-container
-            +BaseAnnouncementFormContainer(self.getAnnouncement(), null, self.getAdminRecipientId(), self.getAdminRecipients(), self.getUserRole(), self.isCanAddStandard())
+            +BaseAnnouncementFormContainer(self.getAnnouncement(), null, self.getAdminRecipientId(), self.getAdminRecipients(), self.getUserRole())
     +AddEditReminderForm(self.getAnnouncement(), self.reminders)
