--- a/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
@@ -5,9 +5,9 @@
             span= self.getSender().getFirstName() + self.getSender().getLastName()
         .x-window-body
             .general-info
-                div
+                .subject-text
                     =self.subject
-                div
+                .body-text
                     =self.body
                 br
                 .form-buttons
