--- a/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
+++ b/Chalkable.Web/assets/sass/partials/main/messages/_add.scss
@@ -31,6 +31,9 @@
       color: #654a16;
       vertical-align: top;
     }
+    .body-text, .subject-text{
+      word-wrap: break-word;
+    }
     textarea{
       height: 60px;
       width: 320px;
