--- a/Chalkable.Web/assets/sass/partials/main/messages/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/messages/_list.scss
@@ -145,10 +145,16 @@ BODY {
                         &.read{
                           @include background(linear-gradient(top, #ded5c3,#d4c6af));
                           border-top: 1px solid #e8e8e8;
+                          &:hover{
+                            @include background(linear-gradient(top, #cec5b3, #c4b69f));
+                          }
                         }
                         &.unread{
                           @include background(linear-gradient(top, #f5ebd7,#eadac1));
                           border-top: 1px solid white;
+                          &:hover{
+                            @include background(linear-gradient(top, #e5dbc7, #dacab1));
+                          }
                         }
                         border-bottom: 1px solid #968466;
                         @include box-shadow(0 1px 0 #88785d);
