--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
@@ -56,7 +56,7 @@
                             needDots = true,
                             roundedDots = true,
                             padding = 77
-                        ).grid-toolbar.i-b
+                        ).grid-toolbar.i-b.big-arrows
                             .dotted-container.grade-container.with-horizontal-dots
                                 .type-name=Msg.Avg
                                 .time
