--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -6,26 +6,29 @@ selectedId = topData.getSelectedItemId()
 ).classes-bar
 .action-bar.not-transparent.buttons
     .container.panel-bg
-        .left.no-border
-            +DatePicker('attendanceDate', self.getDate())(
-                data-options={
-                    showOtherMonths: true,
-                    selectOtherMonths: true
-                },
-                data-controller= "attendance",
-                data-action="seatingChart",
-                data-params=selectedId ? [selectedId.valueOf()] : null
-            )#attendance-date.tb-date-picker
+        .left
         .right
             +ActionLink('attendance', 'classList', selectedId)=Msg.List
             a.action-link.pressed=Msg.Seating_Chart
 .page-content
     seatingList = self.getSeatingList()
-    if self.getSizeX() == 0 || self.getSizeY() == 0
-        +ActionLink('attendance', 'showEditGridWindow').grey-button=Msg.Create_grid
+    if self.getColumns() == 0 || self.getRows() == 0
+        +ActionLink('attendance', 'showEditGridWindow', selectedId.valueOf(), self.getRows(), self.getColumns()).grey-button=Msg.Create_grid
         .black-arrow.start=Msg.Start_by_creating_a_grid
     else
-        +ActionLink('attendance', 'showEditGridWindow').grey-button=Msg.Edit_grid
+        +ActionLink('attendance', 'showEditGridWindow', selectedId.valueOf(), self.getRows(), self.getColumns()).grey-button=Msg.Edit_grid
+        .grey-button.add-remove-students=Msg.Add_remove_students
         .black-arrow.add=Msg.Add_your_students
-
+        .seating-chart-container
+            +LeftRightToolbar()(
+                needDots = true,
+                roundedDots = true,
+                padding = 110
+            ).seating-toolbar.auto-h.big-arrows
+                each items in seatingList
+                    .seating-row
+                        each item in items
+                            info = item.getInfo()
+                            div(data-index=item.getIndex(), class=info ? '' : 'empty-box').student-block.droppable.draggable
+                                +RenderWith(info || new chlk.models.attendance.ClassAttendance, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
 
