--- a/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingClassSummaryPart.jade
@@ -8,4 +8,4 @@
                     +LeftRightToolbar(item.getByAnnouncementTypes(), chlk.templates.grading.GradingClassSummaryItemTpl)(
                         needDots = true,
                         roundedDots = true
-                    )
+                    ).big-arrows
