--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -527,6 +527,7 @@ TEXTAREA.animated-textarea{
   color: #51595d !important;
   @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
   @include box-shadow(0 1px 0 0 #fff inset, 0 1px 2px 0px #999);
+  cursor: pointer;
     
   border: 1px solid #b3b3b3;
     
