--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -88,7 +88,7 @@ h1,h2,h3,h4,h5,h6,strong {
 
 @font-face {
   font-family: 'HelveticaNeue';
-  src: url('fonts/HelveticaNeue.ttf') as "font/ttf";
+  src: url(fonts/HelveticaNeue.ttf);
 }
 
 @font-face {
