--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -76,7 +76,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
             )#expiresdate
         if !isAdminAnnouncement
             .max-score-container
-                input(name="maxscore", placeholder=Msg.Max_score + ' 100', class="validate[required,min[0]]", value=announcement.getMaxScore())
+                input(name="maxscore", placeholder=Msg.Max_score + ' 100', class="validate[required,custom[number],min[0]]", value=announcement.getMaxScore())
                 div(data-tooltip=Msg.Max_Score_Tooltip_Message).question-mark ?
             .advanced-options
                 .advanced-options-btn.title.btn=Msg.Advanced_options
@@ -85,11 +85,11 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 .advanced-options-container.x-hidden
                     .weight-multiplier.new-input-container
                         .title=Msg.Weight_Multiplier
-                        input(name='weightmultiplier', class="validate[required,min[0],max[1.00]]", placeholder="1.00", value=announcement.getWeightMultiplier() || 1.00)
+                        input(name='weightmultiplier', class="validate[required,custom[number],min[0],max[1.00]]", placeholder="1.00", value=announcement.getWeightMultiplier() || 1.00)
                         div(data-tooltip=Msg.Weight_Multiplier_Tooltip_Message).question-mark ?
                     .weight-addition.new-input-container
                         .title=Msg.Weight_Addition
-                        input(name='weightaddition', class="validate[required,min[0],max[1.00]]", placeholder="0.00", value=announcement.getWeightAddition() || 0.00)
+                        input(name='weightaddition', class="validate[required,custom[number],min[0],max[1.00]]", placeholder="0.00", value=announcement.getWeightAddition() || 0.00)
                         div(data-tooltip=Msg.Weight_Addition_Tooltip_Message).question-mark ?
                     .check-box-container
                         .title=Msg.Hide_from_Students
