--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -8,12 +8,16 @@ div(class = noStarred ? "no-starred" : "").feed-container
         ).classes-bar
     .action-bar.not-transparent
         .container.panel-bg
-            .i-b
-                +ActionLink('feed', 'list', true, !self.starredOnly, selectedId, 0)(class=self.starredOnly ? 'pr' : 'unpr')
-                    span#importan-count= self.importantCount
-            .feed-notifications Notifications
-                .new-notification-count=self.getNewNotificationCount()
-                +ActionLink('notification', 'listNew')
+            .left
+                .i-b
+                    +ActionLink('feed', 'list', true, !self.starredOnly, selectedId, 0)(class=self.starredOnly ? 'pr' : 'unpr')
+                        span#importan-count= self.importantCount
+            .right
+                .notification-btn-container
+                    .feed-notifications Notifications
+                        if self.getNewNotificationCount() > 0
+                            .new-notification-count=self.getNewNotificationCount()
+                        +ActionLink('notification', 'listNew')
     if noStarred
         label#feed-arrow.blue-arrow.left-up-arrow=Msg.See_more_items
         label#no-items.blue-arrow.gray.div=Msg.No_items_marked_important
