--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -90,6 +90,15 @@ $star-size: 18px;
           }
         }
       }
+      .right{
+        border-left: 1px solid #d0d0d0;
+        height: 100%;
+        .notification-btn-container{
+          border-left: 1px solid #ffffff;
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 
