--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -662,7 +662,7 @@ BODY {
   }
 }
 
-#chlk-pop-up-container{
+#chlk-pop-up-container, .chlk-pop-up-container{
   .big-triangle {
     left: 0;
     width: 100%;
