--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -33,14 +33,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                 +ActionForm('announcement', 'updateAnnouncementGrade').update-grade-form
                     input(type="submit").x-hidden
                     +Hidden('id', item.getId())
-                    +Hidden('standardGrades', item.getStandardsGrades()).standard-grades
-                    +Hidden('standardIds', item.getStandardsIds()).standard-ids
                     +Hidden('announcementId', item.getAnnouncementId())
-                    +Hidden('dropped', isDrop)
-                    +Hidden('isincomplete', item.isIncomplete())
-                    +Hidden('islate', item.isLate())
-                    +Hidden('isabsent', item.isAbsent())
-                    +Hidden('isexempt', item.isExempt())
                     +ActionLink('students', 'info', student.getId())(data-tooltip=student.getFullName()).left.image-container.white.shadow
                         +PersonImg(student, 47)
                     .i-b.name-block
@@ -62,6 +55,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                         +RenderWith(item, chlk.templates.announcement.StudentAnnouncement)(
                             userRole = self.getUserRole()
                             maxScore = self.getMaxScore()
+                            ableDropStudentScore = self.isAbleDropStudentScore()
                         )
         .attachments-container.z-10
             .attachments-container-2
@@ -71,5 +65,4 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                 each app, i in self.getApplications()
                     +ActionLink('apps', 'viewApp', app.getUrl(), app.getGradingViewUrl(), chlk.models.apps.AppModes.GRADINGVIEW, app.getId()).announcement-item.application
                         +AppAttachmentBlock(app, self.getPictureURL(app.getSmallPictureId(), 74, 74), i)
-                .standards-block
-                    +RenderWith(item, chlk.templates.announcement.AnnouncementViewStandardsTpl)
+
