--- a/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
@@ -1,7 +1,7 @@
 mixin LabeledCheckbox(text, name, val, isReadOnly)
     .labeled-checkbox
         +Checkbox(name, val, isReadOnly)(attributes).checkbox
-        label(for=name)=text
+        label(for=attributes.id)=text
 
 
 
