--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -20,10 +20,13 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
             .letters 0 - #{self.getMaxScore()}
             .grading-input-popup.chlk-pop-up-container.popup-bottom
                 .pop-up-triangle.big
+                id = getDate().getTime()
                 if self.isAbleDropStudentScore()
-                    +LabeledCheckbox(Msg.Drop, 'dropped', self.isDropped())(data-value=self.isDropped(), id='dropped' + self.getId().valueOf()).with-value
-                +LabeledCheckbox(Msg.Late, 'islate', self.isLate())(data-value=self.isLate(), id='islate' + self.getId().valueOf()).with-value
-                +LabeledCheckbox(Msg.Incomplete, 'isincomplete', self.isIncomplete())(data-value=self.isIncomplete(), id='isincomplete' + self.getId().valueOf()).with-value
-                +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt' + self.getId().valueOf()).with-value
-                +LabeledCheckbox(Msg.Absent, 'isabsent', self.isAbsent())(data-value=self.isAbsent(), id='isabsent' + self.getId().valueOf()).with-value
+                    +LabeledCheckbox(Msg.Drop, 'dropped', self.isDropped())(data-value=self.isDropped(), id='dropped-' + id).with-value
+                else
+                    +Hidden('dropped', self.isDropped())
+                +LabeledCheckbox(Msg.Late, 'islate', self.isLate())(data-value=self.isLate(), id='islate-' + id).with-value
+                +LabeledCheckbox(Msg.Incomplete, 'isincomplete', self.isIncomplete())(data-value=self.isIncomplete(), id='isincomplete-' + id).with-value
+                +LabeledCheckbox(Msg.Exempt, 'isexempt', self.isExempt())(data-value=self.isExempt(), id='isexempt-' + id).with-value
+                +LabeledCheckbox(Msg.Absent, 'isabsent', self.isAbsent())(data-value=self.isAbsent(), id='isabsent-' + id).with-value
                 +LabeledCheckbox(Msg.Fill, 'fill', false).fill-grade
