--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
@@ -79,12 +79,12 @@
                                                 .with-comment
                                             .edit-cell
                                             +ActionForm('announcement', 'updateAnnouncementGradeFromGrid')
-                                                input(type="submit").x-hidden
                                                 +Hidden('comment', info.getComment())(
                                                     data-comment = info.getComment()
                                                 ).comment-value
                                                 +Hidden('id', info.getId())
-                                                +Hidden('announcementId', info.getAnnouncementId())
+                                                +Hidden('announcementid', info.getAnnouncementId())
+                                                +Hidden('studentId', item.getStudents()[i].getStudentInfo().getId())
                                                 input(value=normalValue,
                                                     name="gradevalue",
                                                     data-max-score=announcement.getMaxScore() || 100,
@@ -96,6 +96,8 @@
                                                     .pop-up-triangle.big
                                                     if announcement.isAbleDropStudentScore()
                                                         +LabeledCheckbox(Msg.Drop, 'dropped', info.isDropped())(data-value=info.isDropped(), id='dropped' + info.getId().valueOf()).with-value
+                                                    else
+                                                        +Hidden('dropped', info.isDropped())
                                                     +LabeledCheckbox(Msg.Late, 'islate', info.isLate())(data-value=info.isLate(), id='islate' + info.getId().valueOf()).with-value
                                                     +LabeledCheckbox(Msg.Incomplete, 'isincomplete', info.isIncomplete())(data-value=info.isIncomplete(), id='isincomplete' + info.getId().valueOf()).with-value
                                                     +LabeledCheckbox(Msg.Exempt, 'isexempt', info.isExempt())(data-value=info.isExempt(), id='isexempt' + info.getId().valueOf()).with-value
