updated standards grid

--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -4,7 +4,7 @@ BODY {
       DIV#content-wrapper{
         #main-wrapper {
           #main{
-            .grading-class-summary-grid-page{
+            .class-grading{
               .mps-container .marking-period-container .mp-data .ann-types-container {
                 margin-bottom: -30px;
               }
